# PyC

./: .gitignore  CMakeLists.txt  README.md  enable_develop_path.sh  pyc.code-workspace
hello1/: CMakeLists.txt  teste.py
hello1/include/: libHello1.h
hello1/src/: bind.c  libHello1.c
spam/: CMakeLists.txt  spammodule.c  spammodule.h  teste.py
